# multithread_cpp

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  Doxyfile  README.MD  grafico.py  main.cpp  pipeline.h  process_thread.h  profile_print.h  source_process_threads.h  source_threads.h  thread_utils.h
.github/workflows/: ci.yml  nightly-stress.yml  release.yml  sanitizers.yml
bench/: grafico.py
docs/: ARCHITECTURE.md  DECISIONS.md  INDEX.md  QUICKSTART.md
include/: bench_config.h  bench_metrics.h  pipeline.h  process_thread.h  profile_print.h  source_process_threads.h  source_threads.h  thread_utils.h
scripts/: build.sh  format.sh  run_bench.sh  run_tests.sh
src/: main.cpp  process_thread.cpp  profile_print.cpp  source_process_threads.cpp  source_threads.cpp
tests/: CMakeLists.txt  test_cli_output.cpp  test_pipeline.cpp  test_process_buffer.cpp  test_processed_items.cpp  test_profile_silencer.cpp  test_race_conditions.cpp  test_stress.cpp  test_thread_base.cpp  test_throughput_smoke.cpp
